--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,205 @@
-absl-py
-aiohttp
-alpaca-trade-api
-aniso8601
-asgiref
-astunparse
-async-timeout
-attrs
-autopep8
-cachetools
-certifi
-chardet
-click
-cycler
-Django
-gast
-google-auth
-google-auth-oauthlib
-google-pasta
-graphene
-graphene-django
-graphql-core
-graphql-relay
-grpcio
-h11
-h5py
-idna
-int-date
-joblib
-Keras
-Keras-Preprocessing
-kiwisolver
-lxml
-Markdown
-matplotlib
-mplfinance
-multidict
-multitasking
-numpy
-oauthlib
-opt-einsum
-pandas
-patsy
-Pillow
-plotly
-promise
-protobuf
-psycopg2
-pyasn1
-pyasn1-modules
-pycodestyle
-pyparsing
-python-dateutil
-pytz
-PyYAML
-requests
-requests-oauthlib
-retrying
-rsa
-Rx
-scikit-learn
-scipy
-singledispatch
-six
-sklearn
-SQLAlchemy
-sqlparse
-statsmodels
-stockstats
-ta
-tensorboard
-tensorboard-plugin-wit
-tensorflow
-tensorflow-estimator
-termcolor
-threadpoolctl
-toml
-Unidecode
-urllib3
-uvicorn
-websocket-client
-websockets
-Werkzeug
-wrapt
-yahoo-earnings-calendar
-yahoo-fin
-yarl
-yfinance
+absl-py==0.10.0
+aiohttp==3.6.2
+alpaca-trade-api==1.2.0
+altair==4.1.0
+aniso8601==7.0.0
+argon2-cffi==20.1.0
+asgiref==3.2.10
+astor==0.8.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+atomicwrites==1.4.0
+attrs==20.2.0
+autopep8==1.5.4
+backcall==0.2.0
+backtrader2==1.9.76.123
+base58==2.1.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+blinker==1.4
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.5
+chardet==3.0.4
+click==7.1.2
+cmdstanpy==0.9.5
+colorama==0.4.4
+convertdate==2.2.2
+cvxopt==1.2.5.post1
+cvxpy==1.1.7
+cycler==0.10.0
+Cython==0.29.21
+dash==1.18.1
+dash-core-components==1.14.1
+dash-html-components==1.1.1
+dash-renderer==1.8.3
+dash-table==4.11.1
+decorator==4.4.2
+defusedxml==0.6.0
+Django==3.1.2
+ecos==2.0.7.post1
+entrypoints==0.3
+ephem==3.7.7.1
+feedparser==6.0.2
+Flask==1.1.2
+Flask-Compress==1.8.0
+future==0.18.2
+gast==0.3.3
+gitdb==4.0.5
+GitPython==3.1.13
+google-auth==1.22.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+graphene==2.1.8
+graphene-django==2.13.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+grpcio==1.32.0
+h11==0.11.0
+h5py==2.10.0
+holidays==0.10.3
+idna==2.10
+iniconfig==1.1.1
+int-date==0.1.8
+ipykernel==5.4.3
+ipython==7.20.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==0.16.0
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+korean-lunar-calendar==0.2.1
+LunarCalendar==0.0.9
+lxml==4.5.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.3
+mistune==0.8.4
+mpl-finance==0.10.1
+mplfinance==0.12.7a0
+msgpack==1.0.2
+multidict==4.7.6
+multitasking==0.0.9
+mypy==0.812
+mypy-extensions==0.4.3
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+nltk==3.5
+notebook==6.2.0
+numpy==1.19.2
+oauthlib==3.1.0
+opt-einsum==3.3.0
+osqp==0.6.1
+packaging==20.9
+pandas==1.1.4
+pandocfilters==1.4.3
+parso==0.8.1
+patsy==0.5.1
+pickleshare==0.7.5
+Pillow==7.2.0
+plotly==4.12.0
+pluggy==0.13.1
+profiler==0.1.0
+prometheus-client==0.9.0
+promise==2.3
+prompt-toolkit==3.0.16
+prophet==0.1.1.post1
+protobuf==3.13.0
+psycopg2==2.8.6
+py==1.10.0
+pyarrow==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.20
+pydeck==0.6.0
+Pygments==2.7.4
+PyMeeus==0.3.7
+pyparsing==2.4.7
+pyportfolioopt==1.2.7
+pyrsistent==0.17.3
+pystan==2.19.1.1
+pytest==6.2.2
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32==300
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==22.0.2
+regex==2020.10.28
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+Rx==1.6.1
+scikit-learn==0.23.2
+scipy==1.5.2
+scs==2.1.2
+seaborn==0.11.0
+selenium==3.141.0
+Send2Trash==1.5.0
+setuptools-git==1.2
+sgmllib3k==1.0.0
+singledispatch==3.4.0.3
+six==1.15.0
+sklearn==0.0
+smmap==3.0.5
+soupsieve==2.1
+SQLAlchemy==1.3.19
+sqlparse==0.3.1
+statsmodels==0.12.0
+stocknews==0.9.11
+stockstats==0.3.1
+streamlit==0.80.0
+style==1.1.0
+ta==0.5.25
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.9.2
+testpath==0.4.4
+textblob==0.15.3
+TFANN==1.0.1
+threadpoolctl==2.1.0
+toml==0.10.1
+toolz==0.11.1
+tornado==6.1
+tqdm==4.51.0
+traitlets==5.0.5
+twitter-sentiment==0.0.6.1
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+tzlocal==2.1
+Unidecode==1.1.1
+update==0.0.1
+urllib3==1.25.10
+uvicorn==0.12.1
+validators==0.18.2
+watchdog==2.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.57.0
+websockets==8.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+yahoo-earnings-calendar==0.6.0
+yahoo-fin==0.8.6
+yarl==1.6.0
+yfinance==0.1.63
