--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ click==7.1.2
 cmdstanpy==0.9.5
 colorama==0.4.4
 convertdate==2.2.2
-cvxopt==1.2.5.post1
+cvxopt
 cvxpy==1.1.7
 cycler==0.10.0
 Cython==0.29.21
